@@ -87,7 +87,7 @@ Notes
 --------------------------------------------------------------------------
 * The name as well as the format of the persistent-storage file has 
   changed between release 0.2 and 0.3.
-* The DAA support was checked with the IBM DAA Test Suite and should work 
+* The DAA support was tested with the IBM DAA Test Suite and should work 
   now as expected. Thanks go to Roger Zimmermann for his kindly help.
 
 Description
