@@ -2,5 +2,5 @@
 #define _TPM_VERSION_H_
 #define VERSION_MAJOR 0
 #define VERSION_MINOR 3
-#define VERSION_BUILD 1150546397
+#define VERSION_BUILD 1150630150
 #endif /* _TPM_VERSION_H_ */
